@@ -1,5 +1,5 @@
 N:*:Default
-506
+510
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -506,3 +506,8 @@ They say that chaotic creatures can be healed with chaos blasts.
 Around the next corner waits you a pack of hounds.
 They say that a priest can dispel other player's ghost too.
 They say that beneath an item on the floor can lie a trap.
+They say that in this world darkness kills.
+Can a dragon enter into a church?
+They say that pints of ale are expensive deep in the dungeon.
+They say that discordance creeps into your party without making a sound..
+They say that 
