@@ -486,3 +486,5 @@ Change list for PernMangband
 
 20/12/2001 (Jir)
 - '/dis' can destroy items with pseudo-id tags ({good} or below).
+- 2 more traps(Voluminous cuisine/Unmagic).
+- small bugfix on msg of set_biofeedback.
